--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <div class="container">
         <div class="frame1">
             <p>Sign up and get 20% off to your first order.</p> <a href="">Sign Up Now</a>
-            <img class="framep" src="./images/frame1.svg" alt="" style="cursor: pointer;">
+            <img class="framep" src="./images/frame1.svg" alt="">
         </div>
         <div class="nav">
-            <a href="D:\Web-project\Figma\index.html" style="text-decoration: none; color: black;">
+            <a href="https://ahsanahmede7.github.io/figmafront/" style="text-decoration: none; color: black;">
                 <h1 class="SHOP">SHOP.CO</h1>
             </a>
             <ol class="navlist">
-                  <a href="D:\Web-project\Figma\index.html">
+                <a href="https://ahsanahmede7.github.io/figmafront/">
                     <li>Shop</li>
                 </a>
-                <a href="D:\Web-project\Figma\Secound\index.html">
+                <a href="https://ahsanahmede7.github.io/figmasecound/">
                     <li>On sale</li>
                 </a>
-                <a href="D:\Web-project\Figma\third\index.html">
+                <a href="https://ahsanahmede7.github.io/figmathird/">
                     <li>New Arrivals</li>
                 </a>
                 <a href="">
@@ -35,7 +35,7 @@
             <div class="search"><img src="./images/Frame.svg" alt="" style="margin-left: 10px;"><input type="text"
                     placeholder="Search for products..." style="background-color:transparent;border: none;width: 97%;">
             </div>
-            <a href="D:\Web-project\Figma\forth\index.html"> <button class="icon"><img src="./images/Frame 5.svg" alt=""></button></a>
+           <a href="https://ahsanahmede7.github.io/figmaforth/"> <button class="icon"><img src="./images/Frame 5.svg" alt=""></button></a>
         </div>
         <hr>
         <div style="margin-left: 90px;margin-top: 30px;color: rgb(34, 32, 32);">
